--- a/assets/style.css
+++ b/assets/style.css
@@ -125,6 +125,7 @@ header {
 /* Gestion des fleches du carrousel */
 #banner .arrow {
 	position: absolute;
+	z-index: 0;
 }
 #banner .arrow_left {
 	left: 10px;
